k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pick-me-a-dinner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pick-me-a-dinner
  template:
    metadata:
      labels:
        app: pick-me-a-dinner
    spec:
      containers:
        - name: pick-me-a-dinner
          image: pick-me-a-dinner:latest
          ports:
            - containerPort: 3000
          resources:
            requests:
              memory: "256Mi"
              cpu: "100m"
            limits:
              memory: "512Mi"
              cpu: "500m"
