k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pick-me-a-dinner
spec:
  selector:
    app: pick-me-a-dinner
  ports:
    - port: 80
      targetPort: 3000
