k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pick-me-a-dinner
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: dinner.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: pick-me-a-dinner
                port:
                  number: 80
